add html template for git repo component

--- a/client/gitRepoSearch/src/app/git-repo/git-repo.component.html
+++ b/client/gitRepoSearch/src/app/git-repo/git-repo.component.html
@@ -1,3 +1,11 @@
-<p>
-  git-repo works!
-</p>
+<div class="gitRepo">
+<div class="gitRepo__avatar"></div>
+<div class="gitRepo__info">
+  <p class="gitRepo__name">Test</p>
+</div>
+<div class="gitRepo__bookMark">
+    <i class="material-icons">
+        star
+        </i>
+</div>
+</div>
