add html and styling for searc component

--- a/client/gitRepoSearch/src/app/app.component.css
+++ b/client/gitRepoSearch/src/app/app.component.css
@@ -2,15 +2,30 @@
   background-color: #ffffff;
 }
 
+.bookMarks__button{
+  display: none;
+}
 .searchRepo {
   background-color: #eeeeee;
+  padding-top: 50px;
 }
 
+.bookMarks__container{
+  display: block;
+}
 @media (min-width: 320px) and (max-width: 480px) {
   .bookMarks__button {
+    display: block;
     width: 100%;
     height: 60px;
   }
 
+  main{
+    height: 100%;
+  }
+
+  .searchRepo{
+    height: 100%;
+  }
 
 }
