--- a/client/gitRepoSearch/src/app/header/header.component.css
+++ b/client/gitRepoSearch/src/app/header/header.component.css
@@ -1,3 +1,17 @@
+main {
+  height: 120px;
+  background-color: #263238;
+  color: white
+}
+
+h1 {  
+  padding-top: 25px;
+  font-size: 50px;
+  width: 90%;
+  margin: auto;
+  text-align: center;
+}
+
 @media (min-width: 320px) and (max-width: 480px) {
   main {
     height: 80px;
