--- a/client/gitRepoSearch/src/app/search-results/search-results.component.css
+++ b/client/gitRepoSearch/src/app/search-results/search-results.component.css
@@ -1,7 +1,20 @@
+main{
+  width: 60%;
+  margin: auto;
+  margin-top: 50px;
+}
+
+img{
+  display: block;
+  width: 30%;
+  margin: auto;
+}
+
 @media (min-width: 320px) and (max-width: 480px) {
   main{
       width: 90%;
       margin: auto;
+      margin-top: 0;
   }
     
   }
