--- a/client/gitRepoSearch/src/app/search/search.component.css
+++ b/client/gitRepoSearch/src/app/search/search.component.css
@@ -1,5 +1,41 @@
-input{
-    text-align: center;
+main {
+  width: 80%;
+  margin: auto
+}
+
+input {
+  text-align: center;
+  width: 80%;
+  height: 50px;
+  border-radius: 3px;
+  display: block;
+  margin: auto;
+  font-size: 20px;
+  border: 1px solid;
+}
+
+button {
+  width: 90px;
+  height: 30px;
+  font-weight: bold;
+  display: block;
+  margin: 30px auto;
+  padding: 0;
+
+  overflow: hidden;
+
+  border-width: 0;
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+
+  background-color: #2ecc71;
+  color: #ecf0f1;
+  transition: background-color .3s;
+}
+
+button:hover {
+  background-color: #27ae60;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -11,14 +47,15 @@ input{
     width: 80%;
     height: 30px;
     border-radius: 3px;
-    display: block;
-    margin: auto;
+    font-size: 16px;
+
   }
 
   button {
+
     display: block;
-    width: 50%;
+    width: 30%;
     margin: auto;
-    margin-top: 10px;
+    margin-top: 20px;
   }
 }
