add fetch git repos function in search component

--- a/client/gitRepoSearch/src/app/git-repo/git-repo.component.html
+++ b/client/gitRepoSearch/src/app/git-repo/git-repo.component.html
@@ -1,7 +1,9 @@
 <div class="gitRepo">
-<div class="gitRepo__avatar"></div>
+<div class="gitRepo__avatar">
+  <img [src]="avatr" alt="userAvatr">
+</div>
 <div class="gitRepo__info">
-  <p class="gitRepo__name">Test</p>
+  <p class="gitRepo__name">{{repoName}}</p>
 </div>
 <div class="gitRepo__bookMark">
     <i class="material-icons">
