--- a/client/gitRepoSearch/src/app/git-repo/git-repo.component.css
+++ b/client/gitRepoSearch/src/app/git-repo/git-repo.component.css
@@ -3,15 +3,24 @@
   height: 100px;
   border: 1px solid gray;
   border-radius: 4px;
+  margin-top: 15px;
+  background-color: ghostwhite;
 }
 
 .gitRepo__avatar {
   flex-grow: 1.5;
   border-right: 0.5px solid gray;
+  width: 15%;
+}
+
+img{
+  width: 100%;
+  height: 100%;
 }
 
 .gitRepo__info {
   flex-grow: 3;
+  width: 50%;
 }
 
 .gitRepo__bookMark {
@@ -20,19 +29,22 @@
 
 .gitRepo__name {
   text-align: center;
+  margin-top: 40px;
 }
 
 i {
-  color: white;
+  color: lightslategray;
   cursor: pointer;
   display: block;
-  width: 80%;
   font-size: 50px;
   text-align: center;
   margin: auto;
   margin-top: 20px;
-  padding-left: 40%;
+  
+}
 
+i:hover{
+  color: orange;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
