display loading spiner when fetching repos

--- a/client/gitRepoSearch/src/app/search/search.component.css
+++ b/client/gitRepoSearch/src/app/search/search.component.css
@@ -38,6 +38,12 @@ button:hover {
   background-color: #27ae60;
 }
 
+img{
+  display: block;
+  width: 20%;
+  margin: auto;
+}
+
 @media (min-width: 320px) and (max-width: 480px) {
   main {
     margin-bottom: 30px;
