--- a/client/gitRepoSearch/src/app/search/search.component.html
+++ b/client/gitRepoSearch/src/app/search/search.component.html
@@ -1,4 +1,5 @@
 <main>
   <input #name type="text" placeholder=" Enter repository name">
   <button (click)="search(name.value)"> Search</button>
+  <img *ngIf="loading" src="../../assets/loadingSpinner.gif" alt="loadingspinner">
 </main>
