--- a/client/gitRepoSearch/src/app/search-results/search-results.component.css
+++ b/client/gitRepoSearch/src/app/search-results/search-results.component.css
@@ -3,9 +3,16 @@ main{
   margin: auto;
   margin-top: 50px;
   height: 500px;
-  overflow-y: auto;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
+.repos{
+  overflow-y: auto;
+  width: 100%;
+  height: 99%;
+  padding-right: 15px;
+}
 
 @media (min-width: 320px) and (max-width: 480px) {
   main{
