--- a/client/gitRepoSearch/src/app/search-results/search-results.component.css
+++ b/client/gitRepoSearch/src/app/search-results/search-results.component.css
@@ -14,6 +14,13 @@ main{
   padding-right: 15px;
 }
 
+.error{
+  width: 70%;
+  margin: auto;
+  color: red;
+  text-align: center;
+}
+
 @media (min-width: 320px) and (max-width: 480px) {
   main{
       width: 90%;
