--- a/client/gitRepoSearch/src/app/search-results/search-results.component.html
+++ b/client/gitRepoSearch/src/app/search-results/search-results.component.html
@@ -1,7 +1,9 @@
 <main>
-  
   <div class="repos" *ngIf="gitRepos && !searchService.loading">
     <app-git-repo *ngFor="let repo of gitRepos.items" [avatr]="repo.owner.avatar_url" [repoName]="repo.name">
     </app-git-repo>
+  </div>
+  <div class="error" *ngIf="error">
+    {{error}}
   </div>
 </main>
