--- a/client/gitRepoSearch/src/app/search-results/search-results.component.html
+++ b/client/gitRepoSearch/src/app/search-results/search-results.component.html
@@ -1,7 +1,11 @@
 <main>
-  <div class="repos" *ngIf="gitRepos && !searchService.loading">
+  <div class="repos" *ngIf="gitRepos && gitRepos.items.length > 0 && !searchService.loading">
     <app-git-repo *ngFor="let repo of gitRepos.items" [avatr]="repo.owner.avatar_url" [repoName]="repo.name">
     </app-git-repo>
+  </div>
+  
+  <div class="noReposFound" *ngIf="gitRepos && gitRepos.items.length === 0">
+    <p style="text-align:center">We couldn’t find any repositories</p>
   </div>
   <div class="error" *ngIf="error">
     {{error}}
