add star color directive

--- a/client/gitRepoSearch/src/app/book-marks/book-marks.component.html
+++ b/client/gitRepoSearch/src/app/book-marks/book-marks.component.html
@@ -1,4 +1,6 @@
 <main>
   <p>Bookmarks</p>
-  <app-git-repo></app-git-repo>
+  <div class="bookMarks" *ngIf="bookMarks">
+  <app-git-repo *ngFor="let repo of bookMarks" [repoName]="repo.repoName" [avatr]="repo.avatr" [isColored]="true"></app-git-repo>
+</div>
 </main>
