--- a/client/gitRepoSearch/src/app/git-repo/git-repo.component.html
+++ b/client/gitRepoSearch/src/app/git-repo/git-repo.component.html
@@ -6,7 +6,7 @@
   <p class="gitRepo__name">{{repoName}}</p>
 </div>
 <div class="gitRepo__bookMark">
-    <i class="material-icons" (click)="saveToBookmarks(repoName, avatr)" [appColorStar]="isColored">
+    <i class="material-icons" (click)="saveOrDeleteRepoFromBookmarks(repoName, avatr)" [appColorStar]="isSaved">
         star
         </i>
 </div>
