--- a/client/gitRepoSearch/src/app/search-results/search-results.component.html
+++ b/client/gitRepoSearch/src/app/search-results/search-results.component.html
@@ -1,7 +1,8 @@
 <main>
-  <div class="repos" *ngIf="gitRepos && gitRepos.length > 0 && !searchService.loading">
-    <app-git-repo *ngFor="let repo of gitRepos" [avatr]="repo.owner.avatar_url" [repoName]="repo.name" [isSaved]='repo.isBookMarked? true: false'>
+  <div class="repos" *ngIf="gitRepos && gitRepos.length > 0 && !searchService.loading && !error" >
+    <app-git-repo *ngFor="let repo of gitRepos" [avatr]="repo.owner.avatar_url" [repoName]="repo.name" [isSaved]="repo.isBookMarked? true : false">
     </app-git-repo>
+    
   </div>
   
   <div class="noReposFound" *ngIf="gitRepos && gitRepos.length === 0 && !searchService.loading">
