add mobile responsivness

--- a/client/gitRepoSearch/src/app/app.component.css
+++ b/client/gitRepoSearch/src/app/app.component.css
@@ -27,13 +27,14 @@ main {
   display: none;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 768px) {
   .bookMarks {
     display: none;
   }
 
   .bookMarksMobile {
     display: block;
+    background-color: #f5f5f5;
   }
 
   .bookMarks__button {
