--- a/client/gitRepoSearch/src/app/git-repo/git-repo.component.css
+++ b/client/gitRepoSearch/src/app/git-repo/git-repo.component.css
@@ -52,10 +52,17 @@ i:hover{
     height: 80px;
     width: 95%;
     margin: auto;
+    margin-top: 10px;
   }
 
   .gitRepo__avatar {
     flex-grow: 2;
+  }
+
+  .gitRepo__name {
+    text-align: center;
+    font-size: 16px;
+    margin-top: 32px;
   }
 
   i {
@@ -65,6 +72,6 @@ i:hover{
     text-align: center;
     margin: auto;
     margin-top: 20px;
-    padding-left: 30%;
+   
   }
 }
