add save bookMarks to session and changed mobile version

--- a/client/gitRepoSearch/src/app/app.component.html
+++ b/client/gitRepoSearch/src/app/app.component.html
@@ -4,12 +4,12 @@
    <div class="bookMarks">
      <app-book-marks></app-book-marks>
    </div>
-   <div class="bookMarksMobile">
+   <!-- <div class="bookMarksMobile">
      <button class="bookMarks__button" (click)="openBookMarks()">Bookmarks</button>
      <div class="bookMarks__container" [ngStyle]="{display: displayBookMarks ? 'block' : 'none'}">
        <app-book-marks></app-book-marks>
      </div>
-   </div>
+   </div> -->
    <div class="searchRepo">
      <app-search></app-search>
      <app-search-results></app-search-results>
