--- a/client/gitRepoSearch/src/app/app.component.css
+++ b/client/gitRepoSearch/src/app/app.component.css
@@ -29,7 +29,7 @@ main {
 
 @media (min-width: 320px) and (max-width: 768px) {
   .bookMarks {
-    display: none;
+    max-height: 250px;
   }
 
   .bookMarksMobile {
